<resources>
    <string name="app_name">LMP21101020</string>
    <string name="nama_judul">Hello I Made Arta Pradana</string>
    <string name="Registrasi">Registrasi</string>
    <string name="Explorer">Explorer</string>
    <string name="todo">TODO</string>
    <string name="Form_register">Form Register</string>
    <string name="NIM">NIM</string>
    <string name="Nama">Nama</string>
    <string name="Alamat">Alamat</string>
    <string name="Email">Email</string>
    <string name="Telepon">Telepon</string>
    <string name="Agama">Agama</string>
    <string name="Hobi">Hobi</string>
    <string name="Submit">Submit</string>
    <string name="Form_pendaftaran">Form Pendaftaran</string>
    <string name="ame">Name</string>
    <string name="masukan_nama_anda">Masukan nama anda</string>
    <string name="masukan_nim_anda">Masukan nim anda</string>
    <string name="masukan_alamat_anda">Masukan alamat anda</string>
    <string name="masukan_tanggal_lahir">Masukan tanggal lahir</string>
    <string name="masukan_tempat_lahir">Masukan tempat lahir</string>
    <string name="masukan_telepon_anda">Masukan telepon anda</string>
    <string name="masukan_agama_anda">Masukan agama anda</string>
    <string name="simpan">SIMPAN</string>
    <string name="nama">Nama</string>
    <string name="nim">Nim</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="tempat_lahir">Tempat Lahir</string>
    <string name="agama">Agama</string>
    <string name="telepon">Telepon</string>
    <string name="alamat">Alamat</string>
    <string name="form_pendaftaran_mahasiswa">Form Pendaftaran Mahasiswa</string>
    <string name="mmasukan_nim_anda">Masukan nim anda</string>
    <string name="masukan_prodi_anda">Masukan prodi anda</string>
    <string name="hapus_data_mahasiswa">Hapus Data Mahasiswa</string>
    <string name="informasi_mahasiswa">Informasi Mahasiswa</string>
    <string name="todoo">TODO</string>
</resources>