<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Latihan4a">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#673AB7"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="UselessLeaf,TextSizeCheck">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Form_pendaftaran"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="213dp"
        android:layout_height="48dp"
        android:autofillHints="nama"
        android:ems="10"
        android:inputType="text"
        android:minHeight="48dp"
        android:text="@string/masukan_nama_anda"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.858"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.134"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/editTextText2"
        android:layout_width="213dp"
        android:layout_height="48dp"
        android:autofillHints="nama"
        android:ems="10"
        android:inputType="text"
        android:minHeight="48dp"
        android:text="@string/masukan_nim_anda"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.865"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.226"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/editTextText3"
        android:layout_width="213dp"
        android:layout_height="48dp"
        android:autofillHints="nama"
        android:ems="10"
        android:inputType="text"
        android:minHeight="48dp"
        android:text="@string/masukan_alamat_anda"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.868"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.311"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/editTextText4"
        android:layout_width="213dp"
        android:layout_height="48dp"
        android:autofillHints="nama"
        android:ems="10"
        android:inputType="text"
        android:minHeight="48dp"
        android:text="@string/masukan_tanggal_lahir"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.868"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.405"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/editTextText5"
        android:layout_width="213dp"
        android:layout_height="48dp"
        android:autofillHints="nama"
        android:ems="10"
        android:inputType="text"
        android:minHeight="48dp"
        android:text="@string/masukan_tempat_lahir"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.868"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/editTextText6"
        android:layout_width="213dp"
        android:layout_height="48dp"
        android:autofillHints="nama"
        android:ems="10"
        android:inputType="text"
        android:minHeight="48dp"
        android:text="@string/masukan_telepon_anda"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.868"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.693"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/editTextText7"
        android:layout_width="213dp"
        android:layout_height="48dp"
        android:autofillHints="nama"
        android:ems="10"
        android:inputType="text"
        android:minHeight="48dp"
        android:text="@string/masukan_agama_anda"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.868"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.597"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/button"
        android:layout_width="177dp"
        android:layout_height="61dp"
        android:text="@string/simpan"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.888"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.853" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="80dp"
        android:layout_height="26dp"
        android:layout_marginEnd="36dp"
        android:text="@string/nama"
        android:textColor="#0B0B0B"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/editTextText"
        app:layout_constraintHorizontal_bias="0.462"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="105dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="80dp"
        android:layout_height="26dp"
        android:layout_marginEnd="36dp"
        android:text="@string/nim"
        android:textColor="#0B0B0B"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/editTextText2"
        app:layout_constraintHorizontal_bias="0.446"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="165dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="115dp"
        android:layout_height="27dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="39dp"
        android:text="@string/tanggal_lahir"
        android:textColor="#0B0B0B"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/editTextText4"
        app:layout_constraintHorizontal_bias="0.151"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="288dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="115dp"
        android:layout_height="27dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="39dp"
        android:text="@string/tempat_lahir"
        android:textColor="#0B0B0B"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/editTextText5"
        app:layout_constraintHorizontal_bias="0.151"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="352dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="80dp"
        android:layout_height="26dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="39dp"
        android:text="@string/agama"
        android:textColor="#0B0B0B"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/editTextText7"
        app:layout_constraintHorizontal_bias="0.151"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="420dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="80dp"
        android:layout_height="26dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="39dp"
        android:text="@string/telepon"
        android:textColor="#0B0B0B"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/editTextText6"
        app:layout_constraintHorizontal_bias="0.151"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="483dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="80dp"
        android:layout_height="26dp"
        android:layout_marginEnd="36dp"
        android:text="@string/alamat"
        android:textColor="#0B0B0B"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/editTextText3"
        app:layout_constraintHorizontal_bias="0.446"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="225dp"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>