<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".latihan5a1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/Judul"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="#673AB7"
            android:gravity="center"
            android:text="@string/form_pendaftaran_mahasiswa"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Nama"
                android:layout_width="59dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Nama" />

            <EditText
                android:id="@+id/inputNama"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="Masukan nama anda"
                android:autofillHints="nama"
                tools:ignore="LabelFor" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/alamat"
                android:layout_width="59dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Alamat" />

            <EditText
                android:id="@+id/editalamat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="Masukan Alamat Anda" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tanggalLahir"
                android:layout_width="59dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Tanggal Lahir" />

            <EditText
                android:id="@+id/inputTanggalLahir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="Masukan tanggal lahir anda" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tmptlahir"
                android:layout_width="59dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Tempat Lahir" />

            <EditText
                android:id="@+id/fix"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="Masukan tempat lahir anda" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/telepon"
                android:layout_width="59dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="No Telepon" />

            <EditText
                android:id="@+id/edittlp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="Masukan nomor telepon anda" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/hobi"
                android:layout_width="59dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Hobi" />

            <EditText
                android:id="@+id/editHobi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="Masukan hobi anda" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/agama"
                android:layout_width="59dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Agama" />

            <EditText
                android:id="@+id/editAgama"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="Masukan agama anda" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Button" />
    </LinearLayout>
</LinearLayout>